--- a/app/src/main/res/layout/content_nba411_main.xml
+++ b/app/src/main/res/layout/content_nba411_main.xml
@@ -7,7 +7,7 @@
     android:background="#000000"
     android:orientation="vertical"
     android:visibility="visible"
-    tools:context=".MainActivity">
+    tools:context=".NBA411Main" >
 
     <Button
         android:id="@+id/button"
