--- a/app/src/main/res/layout/content_search.xml
+++ b/app/src/main/res/layout/content_search.xml
@@ -5,8 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context=".SearchBar"
-    tools:showIn="@layout/activity_search_bar">
+    tools:context=".search"
+    tools:showIn="@layout/activity_search">
 
     <Button
         android:id="@+id/button4"
