--- a/app/src/main/res/layout/content_search.xml
+++ b/app/src/main/res/layout/content_search.xml
@@ -6,6 +6,7 @@
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context=".search"
+    android:orientation="vertical"
     tools:showIn="@layout/activity_search">
 
     <Button
@@ -39,10 +40,14 @@
 
     <TextView
         android:id="@+id/textView"
-        android:layout_width="334dp"
+        style="@style/Widget.AppCompat.Button.Borderless"
+        android:layout_width="0dp"
         android:layout_height="370dp"
-        android:text="*** Possible Results Appear Here ***"
+        android:layout_gravity="center"
+        android:layout_marginEnd="8dp"
         android:fontFamily="lobster"
-        tools:layout_editor_absoluteX="16dp"
+        android:text="*** Possible Results Appear Here ***"
+        app:layout_constraintEnd_toEndOf="parent"
         tools:layout_editor_absoluteY="130dp" />
+
 </android.support.constraint.ConstraintLayout>
