--- a/app/src/main/res/layout/content_search.xml
+++ b/app/src/main/res/layout/content_search.xml
@@ -29,18 +29,7 @@
         tools:layout_editor_absoluteY="5dp"
         tools:ignore="MissingConstraints" />
 
-    <font-family xmlns:android="http://schemas.android.com/apk/res/android">
 
-        <font
-            android:font="@font/lobster_regular"
-            android:fontStyle="normal"
-            android:fontWeight="400" />
-
-        <font
-            android:font="@font/lobster_italic"
-            android:fontStyle="italic"
-            android:fontWeight="400" />
-    </font-family>
 
     <TextView
         android:id="@+id/textView"
@@ -62,5 +51,20 @@
         android:text="Button"
         tools:layout_editor_absoluteX="53dp"
         tools:layout_editor_absoluteY="81dp" />
+
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"
+        android:background="?attr/colorPrimary"
+        app:popupTheme="@style/AppTheme.PopupOverlay" />
+
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/fab"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|end"
+        android:layout_margin="@dimen/fab_margin"
+        app:srcCompat="@android:drawable/ic_dialog_email" />
 
 </android.support.constraint.ConstraintLayout>
